添加Realm数据库

--- a/Example/Podfile
+++ b/Example/Podfile
@@ -2,6 +2,7 @@ use_frameworks!
 
 target 'XBaseStorage_Example' do
   pod 'XBaseStorage', :path => '../'
+  pod 'RealmSwift'
 
   target 'XBaseStorage_Tests' do
     inherit! :search_paths
